<resources>
    <string name="me_str_login">Login</string>
    <string name="me_str_create_account">Create Account</string>
    <string name="me_str_switch_account">Switch Account</string>
    <string name="me_more_options_btn">More Options</string>
    <string name="me_str_succeed">Succeed</string>
    <string name="me_str_failed">Failed</string>
    <string name="me_login_scan_to_add_me">Scan to Add Me</string>
    <string name="me_notification_head">Notification</string>
    <string name="me_backup_head">Account</string>
    <string name="me_security_head">Security &amp; Privacy</string>
    <string name="me_support_head">Feedback</string>
    <string name="me_about_head">About</string>
    <string name="me_device_switch_head">Switch Device</string>
    <string name="me_logout_head">Log Out</string>
    <string name="me_backup_notice_description">Not Backed Up</string>
    <string name="me_new_version_description">New Version Available</string>
    <string name="me_more_title">More</string>
    <string name="me_more_account_title">Accounts</string>
    <string name="me_more_scan">Scan</string>
    <string name="me_take_phone">Take Photo</string>
    <string name="me_choose_phone">Choose Photo</string>
    <string name="me_delete_phone">Delete Photo</string>
    <string name="me_edit_save_success_description">Save Successfully</string>
    <string name="me_edit_save_fail_description">Save Failed</string>
    <string name="me_confirm_logout_title">Log Out</string>
    <string name="me_confirm_logout_notice">Chat history will be cleared after you logged out. Are you sure to proceed?</string>
    <string name="me_confirm_logout_ok_text">Log Out</string>
    <string name="me_confirm_clear_history_title">Clear Chat History</string>
    <string name="me_confirm_clear_history_notice">All content will be deleted for the accounts of yours and the user in this conversation.</string>
    <string name="me_confirm_clear_history_ok_text">Clear</string>
    <string name="me_backup_title">Account</string>
    <string name="me_nick_name_set_title">Please pick a nickname</string>
    <string name="me_nick_name_set_hint">Enter your nickname</string>
    <string name="me_nick_name_set_later">Later</string>
    <string name="me_nick_name_set_save">Save</string>
    <string name="me_nick_name_set_success">Nick Name Saved</string>
    <string name="me_nick_name_set_fail">Nick Name Save Fail</string>
    <string name="me_confirm_password_title">Set Password</string>
    <string name="me_confirm_password_notice">Set password for Account Key encryption and Virtual currency transaction in wallet.</string>
    <string name="me_switch_title">Switch Device</string>
    <string name="me_switch_device_qr_description">Account QR Code</string>
    <string name="me_switch_device_qr_fail_description">Create Account QR Code Fail</string>
    <string name="me_switch_head">Scan QR Code to login</string>
    <string name="me_scan_code_add_contact">Scan the QR Code to Add Contact</string>
    <string name="me_scan_code_add_me">Scan QR code to add me</string>
    <string name="me_switch_notice">Scan QR code and enter password on the new device to login.\nThis device will log out once done.</string>
    <string name="me_default_password_content">This passwords (at least 8 characters) is for Account Key encryption. Please note that passwords can NOT be reset.</string>
    <string name="me_change_password_notice_part">Note: Password can NOT be reset if you forgot it. </string>
    <string name="me_change_password_notce_action">Learn More</string>
    <string name="me_change_password_same_origin_warning">new password is same with origin</string>
    <string name="me_change_password_success">change password success</string>
    <string name="me_change_password_error">The original password you entered is incorrect.</string>
    <string name="me_change_password_strong_description">Strong</string>
    <string name="me_change_password_weak_description">Weak</string>
    <string name="me_change_password_match_description">Match</string>
    <string name="me_change_password_not_match_description">Not Match</string>
    <string name="me_version_head">BCM %1$s</string>
    <string name="me_problem_describe">Describe the problem(s)</string>
    <string name="me_submit">Submit</string>
    <string name="me_version">Version</string>
    <string name="me_copyright">Privacy</string>
    <string name="me_name_title">Name</string>
    <string name="me_name_content">Hint: Please enter a new name.</string>
    <string name="me_id_title">ID</string>
    <string name="me_id_content">Hint: Please enter a new ID.</string>
    <string name="me_register_id">Register your ID</string>
    <string name="me_keys_generated">Keys Generated</string>
    <string name="me_private_key">Private Key</string>
    <string name="me_default_private_key" translatable="false">12399a8b2342342342349fcde09df8da890fe99aefefa5e6afe666ea6faea</string>
    <string name="me_public_key">Public Key</string>
    <string name="me_default_public_key" translatable="false">12399a8b2342342342349fcde09df8da890fe99aefefa5e6afe666ea6faea</string>
    <string name="me_encrypt_your_keys">Encrypt your keys</string>
    <string name="me_keys_encrypted">Keys encrypted</string>
    <string name="me_pin_hint">Password</string>
    <string name="me_re_enter_pin_hint">Re-enter Password</string>
    <string name="me_input_pin_hint">Please input password</string>
    <string name="me_login_successful">Login Successful</string>
    <string name="me_pick_an_id">Pick an ID</string>
    <string name="me_type_id_hint">Type your ID here</string>
    <string name="me_confirm_dialog_title_placeholder">Title</string>
    <string name="me_confirm_dialog_tip_placeholder">Tips</string>
    <string name="me_confirm_dialog_button_placeholder_1">First</string>
    <string name="me_confirm_dialog_button_placeholder_2">Second</string>
    <string name="me_avatar_size_too_big">The avatar is larger than 10MB, please choose another</string>
    <string name="me_unsupported_rq_code">unsupported qr code</string>
    <string name="me_account_unsupported_qr_warning_title">Invalid Account Key</string>
    <string name="me_account_unsupported_qr_warning_description">This QR code is not a valid Account Key, please check and try again</string>
    <string name="me_account_import_qr_warning_title">Import Account Key</string>
    <string name="me_account_import_qr_warning_description">This QR code is an Account Key. It is NOT for adding friend. If you want to import this Account Key, please go to \"Accounts\" in \"More\" tab</string>
    <string name="me_about_new_version_status">Upgrade</string>
    <string name="me_about_latest_version_status">Latest Version</string>
    <string name="me_about_security_support">Security Support</string>
    <string name="me_about_open_source_licenses">Open source licenses</string>
    <string name="me_change_password">Change Password</string>
    <string name="me_account_key">Account Key</string>
    <string name="me_log_out">Log Out</string>
    <string name="me_enter_original_password">Enter original password</string>
    <string name="me_original_password">Original Password</string>
    <string name="me_new_password">New Password</string>
    <string name="me_enter_new_password">Enter new password</string>
    <string name="me_confirm_new_password">Confirm Password</string>
    <string name="me_re_enter_new_password">Re-enter new password</string>
    <string name="me_self_edit_button">Edit</string>
    <string name="me_set_new_password">Set New Password</string>
    <string name="me_enter_password_hint">Enter Password</string>
    <string name="me_re_enter_password_hint">Re-enter Password</string>
    <string name="me_save_success">save successfully</string>
    <string name="me_save_fail">save failed</string>
    <string name="me_title_my_qr_code">My QR Code</string>
    <string name="me_my_qr_code_content">Scan QR Code with BCM to add me.</string>
    <string name="me_my_qr_code_save">Save Image</string>
    <string name="me_reset_password">Reset Password</string>
    <string name="me_forget_password">Forgot Password</string>
    <string name="me_forward">Forward</string>
    <string name="me_share">Share</string>
    <string name="me_input_password_can_not_empty">Password cannot be empty</string>
    <string name="me_save">Save</string>
    <string name="me_psw_not_equals_confirm_psw">Your password and confirmation password do not match.</string>
    <string name="me_account_key_anim_tips">Your Account Key is your \n only pass in BCM</string>
    <string name="me_donate_us">Donate</string>
    <string name="me_setting_title">Settings</string>
    <string name="me_setting_notifications_head">NOTIFICATIONS</string>
    <string name="me_setting_notification_title">Notifications</string>
    <string name="me_setting_language_head">LANGUAGE</string>
    <string name="me_setting_language_title">Language</string>
    <string name="me_setting_tts_language_title">TTS Language</string>
    <string name="me_setting_tts_language_sub_title">The language of TTS (Text to Speech) is used for magnified messages</string>
    <string name="me_setting_block_head">BLOCKED</string>
    <string name="me_setting_blocked_user_title">Blocked Users</string>
    <string name="me_setting_block_stranger_title">Block Strangers\' Msgs</string>
    <string name="me_setting_data_storage_head">DATA AND STORAGE</string>
    <string name="me_setting_clear_cache_title">Clear Cache</string>
    <string name="me_setting_security_head">SECURITY</string>
    <string name="me_setting_pin_lock_title">APP Lock</string>
    <string name="me_setting_privacy_head">PRIVACY ENHANCEMENT</string>
    <string name="me_setting_rtc_p2p_title">Always Relay Calls</string>
    <string name="me_setting_rtc_p2p_sub_title">Relay all calls through a BCM server to avoid revealing your IP address to your contact. Call quality will be reduced.</string>
    <string name="me_setting_connectivity_tip">CONNECTIVITY</string>
    <string name="me_setting_adhoc_title">AirChat</string>
    <string name="me_setting_adhoc_sub_title">Chat without the Internet.</string>
    <string name="me_setting_proxy_title">Proxy</string>
    <string name="me_setting_proxy_item_describe">The proxies added will be automatically activated when BCM service is blocked.</string>
    <string name="me_setting_others_head">OTHERS</string>
    <string name="me_setting_feedback_title">Feedback</string>
    <string name="me_setting_about_title">About</string>
    <string name="me_setting_help_title">FAQ</string>
    <string name="me_notification_setting_title">Notification</string>
    <string name="me_notification_push_title">Push Notification</string>
    <string name="me_notification_title">Message Notifications</string>
    <string name="me_notification_sound_title">Sounds</string>
    <string name="me_notification_vibrate_title">Vibrate</string>
    <string name="me_privacy_settings_title">Privacy</string>
    <string name="me_disable_pin_lock">Disable PIN Lock</string>
    <string name="me_change_pin_lock">Change PIN</string>
    <string name="me_use_6_digit_pin_lock">6-digit PIN</string>
    <string name="me_pin_is_for_identity_describe">PIN is for identity verification before launching the App or accessing your Account Key QR Code.</string>
    <string name="me_pin_lock_auto_lock">Auto-Lock</string>
    <string name="me_unlock_with_fingerprint">Unlock With Fingerprint</string>
    <string name="me_pin_lock_title">PIN Lock</string>
    <string name="me_note_forget_the_pin">Note: if you forget the PIN, you\'ll need to delete and re-install the App. Please note that all chats will be cleared as a result.</string>
    <string name="me_no_block_user">No Blocked Users</string>
    <string name="me_screen_secure_describe">Prevent all screen capture operations of BCM.</string>
    <string name="me_screen_secure_enable_title">Prevent Screenshots</string>
</resources>