<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.bcm.messenger.common.ui.CommonTitleBar2
        android:id="@+id/notification_title_bar"
        style="@style/CommonTitleBarStyle"
        app:center_text="@string/me_setting_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.bcm.messenger.common.ui.AppNotificationNoticer
        android:id="@+id/notification_noticer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/common_horizontal_gap"
        android:paddingTop="10dp"
        android:paddingEnd="@dimen/common_horizontal_gap"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_title_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_noticer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.bcm.messenger.common.ui.CommonSettingItem
                android:id="@+id/setting_notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:setting_item_head="@string/me_setting_notifications_head"
                app:setting_item_line="false"
                app:setting_item_name="@string/me_setting_notification_title"
                app:setting_item_right="arrow"
                app:setting_item_switch="none" />

            <com.bcm.messenger.common.ui.CommonSettingItem
                android:id="@+id/setting_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_notification"
                app:setting_item_head="@string/me_setting_language_head"
                app:setting_item_line="true"
                app:setting_item_name="@string/me_setting_language_title"
                app:setting_item_right="arrow"
                app:setting_item_switch="none" />

            <com.bcm.messenger.common.ui.CommonSettingItem
                android:id="@+id/setting_tts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_language"
                app:setting_item_line="false"
                app:setting_item_name="@string/me_setting_tts_language_title"
                app:setting_item_right="arrow"
                app:setting_item_sub_name="@string/me_setting_tts_language_sub_title"
                app:setting_item_switch="none" />

            <com.bcm.messenger.common.ui.CommonSettingItem
                android:id="@+id/setting_blocked_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_tts"
                app:setting_item_head="@string/me_setting_block_head"
                app:setting_item_line="true"
                app:setting_item_name="@string/me_setting_blocked_user_title"
                app:setting_item_right="arrow"
                app:setting_item_switch="none" />

            <com.bcm.messenger.common.ui.CommonSettingItem
                android:id="@+id/setting_block_stranger"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_blocked_user"
                app:setting_item_line="false"
                app:setting_item_name="@string/me_setting_block_stranger_title"
                app:setting_item_right="none"
                app:setting_item_switch="off" />

            <com.bcm.messenger.common.ui.CommonSettingItem
                android:id="@+id/setting_storage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_block_stranger"
                app:setting_item_head="@string/me_setting_data_storage_head"
                app:setting_item_line="false"
                app:setting_item_name="@string/me_setting_clear_cache_title"
                app:setting_item_right="arrow"
                app:setting_item_switch="none" />

            <com.bcm.messenger.common.ui.CommonSettingItem
                android:id="@+id/setting_adhoc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_storage"
                app:setting_item_head="@string/me_setting_connectivity_tip"
                app:setting_item_line="true"
                app:setting_item_name="@string/me_setting_adhoc_title"
                app:setting_item_right="arrow"
                app:setting_item_sub_name="@string/me_setting_adhoc_sub_title"
                app:setting_item_switch="none" />

            <com.bcm.messenger.common.ui.CommonSettingItem
                android:id="@+id/setting_proxy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_adhoc"
                app:setting_item_line="false"
                app:setting_item_name="@string/me_setting_proxy_title"
                app:setting_item_right="arrow"
                app:setting_item_sub_name="@string/me_setting_proxy_item_describe"
                app:setting_item_switch="none" />

            <com.bcm.messenger.common.ui.CommonSettingItem
                android:id="@+id/setting_pin_lock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_proxy"
                app:setting_item_head="@string/me_setting_security_head"
                app:setting_item_line="true"
                app:setting_item_name="@string/me_setting_pin_lock_title"
                app:setting_item_right="arrow"
                app:setting_item_switch="none" />

            <com.bcm.messenger.common.ui.CommonSettingItem
                android:id="@+id/setting_screen_secure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_pin_lock"
                app:setting_item_line="false"
                app:setting_item_name="@string/me_screen_secure_enable_title"
                app:setting_item_right="none"
                app:setting_item_sub_name="@string/me_screen_secure_describe"
                app:setting_item_switch="off" />

            <com.bcm.messenger.common.ui.CommonSettingItem
                android:id="@+id/setting_rtc_p2p"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_screen_secure"
                app:setting_item_head="@string/me_setting_privacy_head"
                app:setting_item_line="false"
                app:setting_item_name="@string/me_setting_rtc_p2p_title"
                app:setting_item_right="none"
                app:setting_item_sub_name="@string/me_setting_rtc_p2p_sub_title"
                app:setting_item_switch="off" />

            <com.bcm.messenger.common.ui.CommonSettingItem
                android:id="@+id/setting_feedback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_rtc_p2p"
                app:setting_item_head="@string/me_setting_others_head"
                app:setting_item_line="true"
                app:setting_item_name="@string/me_setting_feedback_title"
                app:setting_item_right="arrow"
                app:setting_item_switch="none" />

            <com.bcm.messenger.common.ui.CommonSettingItem
                android:id="@+id/setting_faq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_feedback"
                app:setting_item_line="true"
                app:setting_item_name="@string/me_setting_help_title"
                app:setting_item_right="arrow"
                app:setting_item_switch="none" />

            <com.bcm.messenger.common.ui.CommonSettingItem
                android:id="@+id/setting_about"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_faq"
                app:setting_item_line="false"
                app:setting_item_name="@string/me_setting_about_title"
                app:setting_item_right="arrow"
                app:setting_item_switch="none" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>