<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.bcm.messenger.common.ui.CommonTitleBar2
        android:id="@+id/privacy_title_bar"
        style="@style/CommonTitleBarStyle"
        app:center_text="@string/me_privacy_settings_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.bcm.messenger.common.ui.CommonSettingItem
                android:id="@+id/privacy_pin_lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:setting_item_head="@string/me_setting_security_head"
                app:setting_item_line="false"
                app:setting_item_name="@string/me_setting_pin_lock_title"
                app:setting_item_right="arrow"
                app:setting_item_switch="none" />

            <com.bcm.messenger.common.ui.CommonSettingItem
                android:id="@+id/privacy_blocked_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:setting_item_head="@string/me_setting_privacy_head"
                app:setting_item_line="true"
                app:setting_item_name="@string/me_setting_blocked_user_title"
                app:setting_item_right="arrow"
                app:setting_item_switch="none" />

            <com.bcm.messenger.common.ui.CommonSettingItem
                android:id="@+id/privacy_block_stranger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:setting_item_line="true"
                app:setting_item_name="@string/me_setting_block_stranger_title"
                app:setting_item_right="none"
                app:setting_item_switch="off" />

            <com.bcm.messenger.common.ui.CommonSettingItem
                android:id="@+id/privacy_rtc_p2p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:setting_item_line="false"
                app:setting_item_name="@string/me_setting_rtc_p2p_title"
                app:setting_item_right="none"
                app:setting_item_sub_name="@string/me_setting_rtc_p2p_sub_title"
                app:setting_item_switch="off" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>